MyMinHeap, MyStack and MyQueue are implemented from both list classes.